<resources>
    <string name="app_name">HomeShare</string>
    <string name="title_home">Home</string>
    <string name="title_feed">Feed</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_roommates">Roommates</string>
    <string name="title_profile">Profile</string>
    <string name="title_create_a_post">Create a Post</string>
    <string name="content_about">Notch is an android news application.This is demo for item on Envato</string>
    <string name="share_text" formatted="false">
        Read News \'%1$s\'%n
        Using app \'%2$s\'%n
        http://play.google.com/store/apps/details?id=com.app.notch
    </string>
    <string name="title_activity_comment">Comment</string>
    <string name="comment_input_warning">Please fill comment input</string>
    <string name="comment_exist_warning">Comment already exist</string>
    <string name="comment_add_info">Comment added !</string>
    <string name="hint_input_comment">Input your comment here...</string>
    <string name="hide_comment_msg">This comment is hidden by the admin</string>
    <string name="pending_comment_msg">This comment is waiting for approval</string>
    <string name="comment_pending">Thank you, your comments will be reviewed soon</string>
    <string name="title_activity_dialog_notification">Notification</string>
    <string name="delete_successfully">Delete successfully</string>
    <string name="image_of">%1$d of %2$d</string>
    <string name="title_activity_login">Login</string>
    <string name="title_dialog_forgot_password">Forgot Password</string>
    <string name="hint_input_forgot">Registered Email</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="text_bt_login">LOGIN</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="login_email_warning">Email cannot empty</string>
    <string name="login_email_invalid">Invalid email</string>
    <string name="login_password_warning">Password cannot empty</string>
    <string name="login_success_info">Login Successfully!</string>
    <string name="account_disabled">Account has been disabled</string>
    <string name="invalid_email_password">Invalid email or password</string>
    <string name="email_not_registered">Email not registered</string>
    <string name="email_sent_info">Email has been sent!</string>
    <string name="press_again_exit_app">Press again to exit</string>
    <string name="logout_title">Logout</string>
    <string name="login_title">Login</string>
    <string name="title_menu_home">Home</string>
    <string name="title_menu_topic">Topic</string>
    <string name="title_menu_notif">Notification</string>
    <string name="title_menu_saved">Saved</string>
    <string name="title_menu_setting">Settings</string>
    <string name="title_menu_more">More Apps</string>
    <string name="title_menu_rate">Rate This</string>
    <string name="title_menu_about">About</string>
    <string name="logout_confirmation_text">Are you sure want to logout?</string>
    <string name="msg_app_out_date">Application is out of date, please update to get latest version</string>
    <string name="msg_app_new_version">New version available, update now to get latest feature</string>
    <string name="msg_no_internet">Please check your Internet connection and try again</string>
    <string name="title_info">Info</string>
    <string name="section_topics">Topics</string>
    <string name="section_featured">Featured</string>
    <string name="section_recent">Recent</string>
    <string name="news_type_gallery">Gallery</string>
    <string name="news_type_video">Video</string>
    <string name="news_type_article">Article</string>
    <string name="remove_from_saved">News remove from Saved</string>
    <string name="added_to_saved">News added to Saved</string>
    <string name="title_menu_refresh">Refresh</string>
    <string name="title_dialog_text_size">Text Size</string>
    <string name="author">Author</string>
    <string name="related_news">Related News</string>
    <string name="views">%s views</string>
    <string name="comments">%s comments</string>
    <string name="title_activity_notification">Notification</string>
    <string name="notification_channel_server">Default</string>
    <string name="msg_notif_empty">Notification is empty</string>
    <string name="type_news">NEWS</string>
    <string name="type_topic">TOPIC</string>
    <string name="type_link">LINK</string>
    <string name="type_image">IMAGE</string>
    <string name="type_normal">NORMAL</string>
    <string name="title_activity_register">Register</string>
    <string name="REGISTER">REGISTER</string>
    <string name="title_activity_profile">Profile</string>
    <string name="profile_name_empty">Name cannot empty</string>
    <string name="profile_email_empty">Email cannot empty</string>
    <string name="profile_email_invalid">Invalid email</string>
    <string name="profile_password_empty">Password cannot empty</string>
    <string name="profile_password_invalid">Password alphanumeric only</string>
    <string name="register_success">Register Successfully !</string>
    <string name="email_in_use">Email already in use</string>
    <string name="account_not_found">Account not found or inactive</string>
    <string name="form_action_update">UPDATE</string>
    <string name="form_action_register">REGISTER</string>
    <string name="form_title_update">Update</string>
    <string name="form_title_register">Register</string>
    <string name="have_an_account">Already have an account?</string>
    <string name="register_term_note">By creating an account, you agree with our</string>
    <string name="title_activity_search">Search</string>
    <string name="hint_topic">Topic :\u0020</string>
    <string name="hint_default">Input search</string>
    <string name="please_fill">Please Fill Search Input</string>
    <string name="all_topic">All topic</string>
    <string name="title_activity_search_filter">Search Filter</string>
    <string name="hint_search_topic">Search topic</string>
    <string name="title_filter_topic">Topic</string>
    <string name="title_filter_sort">Sort By</string>
    <string name="title_filter_see_all">SEE ALL</string>
    <string name="sort_default">Default</string>
    <string name="sort_time_desc">Time : New to Old</string>
    <string name="sort_time_asc">Time : Old to New</string>
    <string name="sort_view_desc">View : High to Low</string>
    <string name="sort_view_asc">View : Low to High</string>
    <string-array name="about_title_array">
        <item>Welcome to Notch \nnews reader</item>
        <item>Discover best \nnews information</item>
        <item>Collect your \nfavorite news</item>
        <item>Submit review \nor comment</item>
    </string-array>
    <string-array name="about_description_array">
        <item>Notch is premium news reader\nplatform for everyone</item>
        <item>Search latest and featured information\nfrom all around the world</item>
        <item>Save your favorite news\nand read it later</item>
        <item>Engage with other reader\nby left your comment for each new</item>
    </string-array>
    <string name="title_activity_settings">Settings</string>
    <string name="app_version">Build Version</string>
    <string name="pref_title_contact_us">Contact Us</string>
    <string name="copyright">Copyright © 2019 %s. All right reserved</string>
    <string name="setting_group_profile">Profile</string>
    <string name="setting_group_notif">Notifications</string>
    <string name="setting_group_display">Display</string>
    <string name="setting_group_publisher">Publisher Info</string>
    <string name="setting_group_others">Other</string>
    <string name="setting_subtitle_name">Name</string>
    <string name="setting_subtitle_email">Email</string>
    <string name="setting_title_notif">Push Notifications</string>
    <string name="setting_title_ringtone">Ringtone</string>
    <string name="setting_title_vibrate">Vibrate</string>
    <string name="setting_title_theme">Theme</string>
    <string name="setting_title_enable_cache">Enable Image Cache</string>
    <string name="setting_title_cache">Clear Image Cache</string>
    <string name="setting_title_copyright">Copyright</string>
    <string name="setting_title_email">Email</string>
    <string name="setting_title_website">Website</string>
    <string name="setting_title_phone">Phone</string>
    <string name="setting_title_build">Build Version</string>
    <string name="setting_title_term">Privacy &amp; Policy</string>
    <string name="setting_title_rate">Rate This</string>
    <string name="setting_title_more_apps">More Apps</string>
    <string name="setting_title_intro">Introduction</string>
    <string name="setting_title_about_me">About Me</string>
    <string name="setting_title_major">Major</string>
    <string name="version_unknown">Unknown</string>
    <string name="email_copied">Email Copied to Clipboard</string>
    <string name="dialog_confirm_title">Confirmation</string>
    <string name="message_clear_image_cache">Are you sure want to clear image cache?</string>
    <string name="message_after_clear_image_cache">Image cache successfully clear</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="ringtone_default">Default</string>
    <string-array name="themes">
        <item>Light</item>
        <item>Dark</item>
        <item>Auto</item>
    </string-array>
    <string name="url_copied">URL copied to clipboard</string>
    <string name="FEATURED">Featured</string>
    <string name="MORE">MORE</string>
    <string name="SEE_ALL">SEE ALL</string>
    <string name="OK">OK</string>
    <string name="DEFAULT">DEFAULT</string>
    <string name="GOT_IT">GOT IT</string>
    <string name="YES">YES</string>
    <string name="NO">NO</string>
    <string name="APPLY">APPLY</string>
    <string name="RESET">RESET</string>
    <string name="SETTING">SETTING</string>
    <string name="CANCEL">CANCEL</string>
    <string name="CLOSE">CLOSE</string>
    <string name="UPDATE">UPDATE</string>
    <string name="DISMISS">DISMISS</string>
    <string name="HIDE">HIDE</string>
    <string name="RETRY">RETRY</string>
    <string name="TRY_AGAIN">TRY AGAIN</string>
    <string name="DETAILS">DETAILS</string>
    <string name="FAILED">FAILED</string>
    <string name="DELETE">DELETE</string>
    <string name="OPEN">OPEN</string>
    <string name="SAVE">SAVE</string>
    <string name="NEXT">NEXT</string>
    <string name="SKIP">SKIP</string>
    <string name="SEND">SEND</string>
    <string name="just_now">Just now</string>
    <string name="a_minute_ago">A minute ago</string>
    <string name="minutes_ago">minute ago</string>
    <string name="an_hour_ago">An hour ago</string>
    <string name="hours_ago">Hours ago</string>
    <string name="yesterday">Yesterday</string>
    <string name="days_ago">days ago</string>
    <string name="confirmation">Confirmation</string>
    <string name="failed_text">Something went wrong</string>
    <string name="failed_when_load">Failed when load data</string>
    <string name="no_internet_text">You are offline</string>
    <string name="no_internet_connection">There is something problem with your network, please check your internet setting.</string>
    <string name="unable_connect_server">Unable connect to server</string>
    <string name="no_item">No Item</string>
    <string name="msg_data_loaded">Data loaded</string>
    <string name="title_delete_confirm">Delete Confirmation</string>
    <string name="content_delete_confirm">Are you sure want to delete all&#160;</string>
    <string name="delete_success">Delete successfully</string>
</resources>